Fix alignment in the third section

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ h2 {
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
-    margin: 60px 0;
+    margin: 100px 0 60px;
 }
 
 .photos {
@@ -119,9 +119,15 @@ h2 {
 .three {
     background-color: #E5E7EB;
     padding: 100px 150px;
+    justify-content: center;
+    display: flex;
+}
+
+.quote {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 950px;
 }
 
 blockquote {
@@ -130,15 +136,13 @@ blockquote {
     color: #1F2937;
     font-weight: 300;
     margin: 0;
-    width: 950px;
 }
 
 .name {
     font-weight: bold;
     font-size: 24px;
-    text-align: right;
+    align-self: flex-end;
     margin: 10px 0 0 0;
-    width: 950px;
 }
 
 .four {
